--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ py_version = "all"
 line_length = 120
 profile = "black"
 src_paths = ["src","test"]
-known_first_party = "game"
+known_first_party = "tiland"
 
 [tool.black]
 line-length = 120
