--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,30 +32,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
-    - name: Install dependencies
-      uses: conda-incubator/setup-miniconda@v2
-      with:
-        channels: defaults,conda-forge,joshburt
-        auto-activate-base: false
-        activate-environment: ci.build
-        environment-file: environment.github.yml
-    - name: Conda Info
+    - name: Setup
       run: |
-        conda info
-    - name: Run Auditing
-      run: |
-        anaconda-project run lint
-    - name: Conda Build
-      run: |
-        make clean
         make setup
-        make conda
-#    - name: SonarCloud Scan
-#      uses: sonarsource/sonarcloud-github-action@v2.3.0 # Ex: v2.1.0, See the latest version at https://github.com/marketplace/actions/sonarcloud-scan
-#      env:
-#        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    - name: Publish Dev Package
-      env:
-        ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
+    - name: Prepare
       run: |
-        anaconda --verbose --token $ANACONDA_TOKEN upload --user joshburt --label dev build/noarch/shapeandshare.tiland-*.tar.bz2 --force
+        make prepare
+    - name: Build
+      run: |
+        make build
